<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="category_save_data"
        app:title="@string/pref_screen_category_save_data_title">
        <SwitchPreference
            app:key="@string/pref_screen_key_save_latest_data"
            app:title="@string/pref_screen_save_latest_data_title"
            app:summary="@string/pref_screen_save_latest_data_summary"
            app:defaultValue="true"
            />
        <SwitchPreference
            app:key="@string/pref_screen_key_save_today_image"
            app:title="@string/pref_screen_save_today_image_title"
            app:summary="@string/pref_screen_save_today_image_summary"
            app:defaultValue="true"
            />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
