<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/bottom_controls_container_padding"
    style="@style/StyleBottomControlsContainer"
    >
    <Button
        android:id="@+id/btnTodayGraphUpdate"
        android:text="@string/lbl_btn_update"
        style="@style/StyleButtonUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <RadioGroup
        android:id="@+id/radioDayGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_horizontal_margin"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/btnTodayGraphUpdate"
        app:layout_constraintTop_toTopOf="@id/btnTodayGraphUpdate"
        app:layout_constraintBottom_toBottomOf="@id/btnTodayGraphUpdate"
        >
        <RadioButton
            android:id="@+id/radioToday"
            android:text="@string/lbl_radio_today"
            style="@style/StyleTodayRadio"
            />
        <RadioButton
            android:id="@+id/radioRange"
            android:text="@string/lbl_radio_before_day"
            style="@style/StyleTodayRadio"
            />
    </RadioGroup>
    <!-- 2段目 -->
    <!-- 左端:ガイドライン, 右端: ラベル -->
    <!-- LinearLayout: spinner improving appearance box -->
    <LinearLayout
        android:id="@+id/SpinnerBeforeDayFrame"
        style="@style/StyleContainerWithinSpinner"
        app:layout_constraintStart_toEndOf="@+id/guideFragTodayGraphBtnEnd"
        app:layout_constraintEnd_toStartOf="@id/tvLblJpTo"
        app:layout_constraintTop_toBottomOf="@id/btnTodayGraphUpdate"
        >
        <Spinner
            android:id="@+id/spinnerBeforeDay"
            style="@style/StyleSpinnerInContainer"
            android:entries="@array/beforeDays"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tvLblJpTo"
        android:layout_margin="2dp"
        android:layout_gravity="center_vertical"
        android:text="@string/lbl_jp_to"
        style="@style/StyleTextViewBothSideSpinner"
        app:layout_constraintEnd_toStartOf="@id/inpTvStartDay"
        app:layout_constraintTop_toTopOf="@id/SpinnerBeforeDayFrame"
        app:layout_constraintBottom_toBottomOf="@id/SpinnerBeforeDayFrame"
        />
    <TextView
        android:id="@+id/inpTvStartDay"
        android:layout_margin="3dp"
        android:layout_gravity="center_vertical"
        android:text="@string/init_show_date_value"
        style="@style/StyleFramedPickerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/SpinnerBeforeDayFrame"
        app:layout_constraintBottom_toBottomOf="@id/SpinnerBeforeDayFrame"
        >
        <!-- カレンダーで選択された日付文字列をISO8601形式で保持する -->
        <tag android:id="@id/inpTvStartDay" android:value="@string/init_tag_date_value" />
    </TextView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideFragTodayGraphBtnEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/btnTodayGraphUpdate"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
