<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"
    android:layout_marginBottom="@dimen/frame_margin"
    android:layout_margin="@dimen/frame_margin"
    android:padding="@dimen/frame_padding"
    android:layout_weight="1"
    app:layout_constraintVertical_weight="1"
    android:background="@drawable/frame_background"
    >
    <!-- 1段目: タイトル -->
    <TextView
        android:id="@+id/tvTitleStatTempOut"
        android:text="@string/lbl_stat_temp_out_title"
        style="@style/StyleTempOutStatTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <!-- 2段目 -->
    <TextView
        android:id="@+id/tvStatMinTempOut"
        android:layout_marginTop="@dimen/temp_out_stat_2nd_top_margin"
        android:text="@string/lbl_stat_temp_min"
        style="@style/StyleTempOutStatLabel"
        app:layout_constraintStart_toStartOf="@id/fragTopMainTempOutStatGuideline"
        app:layout_constraintTop_toBottomOf="@id/tvTitleStatTempOut"
        />
    <TextView
        android:id="@+id/valMinAppearTime"
        style="@style/StyleTempOutStatAppearTime"
        android:text="@string/init_temp_out_stat_appear_time"
        app:layout_constraintStart_toEndOf="@id/tvStatMinTempOut"
        app:layout_constraintEnd_toStartOf="@id/valMinTempOut"
        app:layout_constraintTop_toTopOf="@id/tvStatMinTempOut"
        app:layout_constraintBottom_toBottomOf="@id/tvStatMinTempOut"
        />
    <TextView
        android:id="@+id/valMinTempOut"
        style="@style/StyleTempOutStatTempValue"
        android:text="@string/init_temp_out_stat_value"
        app:layout_constraintStart_toEndOf="@id/valMinAppearTime"
        app:layout_constraintEnd_toStartOf="@id/lblTempOutStatMinCelsius"
        app:layout_constraintTop_toTopOf="@id/tvStatMinTempOut"
        app:layout_constraintBottom_toBottomOf="@id/tvStatMinTempOut"
        />
    <TextView
        android:id="@+id/lblTempOutStatMinCelsius"
        style="@style/StyleTempOutStatUnitLabel"
        android:text="@string/footer_lbl_temper_celsius"
        app:layout_constraintBottom_toBottomOf="@id/tvStatMinTempOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/valMinTempOut"
        app:layout_constraintTop_toTopOf="@id/tvStatMinTempOut"
        />
    <!-- 3段目 -->
    <!-- 下マージンを倍にする  -->
    <TextView
        android:id="@+id/tvStatMaxTempOut"
        android:layout_marginTop="@dimen/temp_out_stat_3rd_top_margin"
        android:text="@string/lbl_stat_temp_max"
        style="@style/StyleTempOutStatLabel"
        app:layout_constraintStart_toStartOf="@id/fragTopMainTempOutStatGuideline"
        app:layout_constraintTop_toBottomOf="@id/tvStatMinTempOut"
        />
    <TextView
        android:id="@+id/valMaxAppearTime"
        style="@style/StyleTempOutStatAppearTime"
        android:text="@string/init_temp_out_stat_appear_time"
        app:layout_constraintStart_toEndOf="@id/tvStatMaxTempOut"
        app:layout_constraintEnd_toStartOf="@id/valMaxTempOut"
        app:layout_constraintTop_toTopOf="@id/tvStatMaxTempOut"
        app:layout_constraintBottom_toBottomOf="@id/tvStatMaxTempOut"
        />
    <TextView
        android:id="@+id/valMaxTempOut"
        style="@style/StyleTempOutStatTempValue"
        android:text="@string/init_temp_out_stat_value"
        app:layout_constraintStart_toEndOf="@id/valMaxAppearTime"
        app:layout_constraintEnd_toStartOf="@id/lblTempOutStatMaxCelsius"
        app:layout_constraintTop_toTopOf="@id/tvStatMaxTempOut"
        app:layout_constraintBottom_toBottomOf="@id/tvStatMaxTempOut"
        />
    <TextView
        android:id="@+id/lblTempOutStatMaxCelsius"
        style="@style/StyleTempOutStatUnitLabel"
        android:text="@string/footer_lbl_temper_celsius"
        app:layout_constraintStart_toEndOf="@id/valMaxTempOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvStatMaxTempOut"
        app:layout_constraintBottom_toBottomOf="@id/tvStatMaxTempOut"
        />
    <!-- 4段目: タイトル -->
    <TextView
        android:id="@+id/tvTitleBeforeStatTempOut"
        android:layout_marginTop="@dimen/temp_out_stat_3rd_top_margin"
        android:text="@string/lbl_before_stat_temp_out_title"
        style="@style/StyleTempOutStatTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStatMaxTempOut"
        />
    <TextView
        android:id="@+id/valBeforeStatDay"
        style="@style/StyleTempOutStatBeforeDay"
        android:text="@string/init_before_stat_day"
        app:layout_constraintStart_toEndOf="@id/tvTitleBeforeStatTempOut"
        app:layout_constraintTop_toTopOf="@id/tvTitleBeforeStatTempOut"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleBeforeStatTempOut"
        />
    <!-- 5段目: 前日データ最低 -->
    <TextView
        android:id="@+id/tvStatBeforeTempOut"
        android:layout_marginTop="@dimen/temp_out_stat_2nd_top_margin"
        android:text="@string/lbl_stat_temp_min"
        style="@style/StyleTempOutStatLabel"
        app:layout_constraintStart_toStartOf="@id/fragTopMainTempOutStatGuideline"
        app:layout_constraintTop_toBottomOf="@id/tvTitleBeforeStatTempOut"
        />
    <TextView
        android:id="@+id/valBeforeMinAppearTime"
        style="@style/StyleTempOutStatAppearTime"
        android:text="@string/init_temp_out_stat_appear_time"
        app:layout_constraintStart_toEndOf="@id/tvStatBeforeTempOut"
        app:layout_constraintEnd_toStartOf="@id/valBeforeMinTempOut"
        app:layout_constraintTop_toTopOf="@id/tvStatBeforeTempOut"
        app:layout_constraintBottom_toBottomOf="@id/tvStatBeforeTempOut"
        />
    <TextView
        android:id="@+id/valBeforeMinTempOut"
        style="@style/StyleTempOutStatTempValue"
        android:text="@string/init_temp_out_stat_value"
        app:layout_constraintStart_toEndOf="@id/valBeforeMinAppearTime"
        app:layout_constraintEnd_toStartOf="@id/lblTempOutStatBeforeCelsius"
        app:layout_constraintTop_toTopOf="@id/tvStatBeforeTempOut"
        app:layout_constraintBottom_toBottomOf="@id/tvStatBeforeTempOut"
        />
    <TextView
        android:id="@+id/lblTempOutStatBeforeCelsius"
        style="@style/StyleTempOutStatUnitLabel"
        android:text="@string/footer_lbl_temper_celsius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/valBeforeMinTempOut"
        app:layout_constraintTop_toTopOf="@id/tvStatBeforeTempOut"
        app:layout_constraintBottom_toBottomOf="@id/tvStatBeforeTempOut"
        />
    <!-- 6段目: 前日データ最高 -->
    <TextView
        android:id="@+id/tvStatBeforeMaxTempOut"
        android:layout_marginTop="@dimen/temp_out_stat_3rd_top_margin"
        android:text="@string/lbl_stat_temp_max"
        style="@style/StyleTempOutStatLabel"
        app:layout_constraintStart_toStartOf="@id/fragTopMainTempOutStatGuideline"
        app:layout_constraintTop_toBottomOf="@id/tvStatBeforeTempOut"
        />
    <TextView
        android:id="@+id/valBeforeMaxAppearTime"
        style="@style/StyleTempOutStatAppearTime"
        android:text="@string/init_temp_out_stat_appear_time"
        app:layout_constraintStart_toEndOf="@id/tvStatBeforeMaxTempOut"
        app:layout_constraintEnd_toStartOf="@id/valBeforeMaxTempOut"
        app:layout_constraintTop_toTopOf="@id/tvStatBeforeMaxTempOut"
        app:layout_constraintBottom_toBottomOf="@id/tvStatBeforeMaxTempOut"
        />
    <TextView
        android:id="@+id/valBeforeMaxTempOut"
        style="@style/StyleTempOutStatTempValue"
        android:text="@string/init_temp_out_stat_value"
        app:layout_constraintStart_toEndOf="@id/valBeforeMaxAppearTime"
        app:layout_constraintEnd_toStartOf="@id/lblTempOutStatBeforeMaxCelsius"
        app:layout_constraintTop_toTopOf="@id/tvStatBeforeMaxTempOut"
        app:layout_constraintBottom_toBottomOf="@id/tvStatBeforeMaxTempOut"
        />
    <TextView
        android:id="@+id/lblTempOutStatBeforeMaxCelsius"
        style="@style/StyleTempOutStatUnitLabel"
        android:text="@string/footer_lbl_temper_celsius"
        app:layout_constraintStart_toEndOf="@id/valBeforeMaxTempOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvStatBeforeMaxTempOut"
        app:layout_constraintBottom_toBottomOf="@id/tvStatBeforeMaxTempOut"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragTopMainTempOutStatGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guid_line_temp_out_stat_begin"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
